# threatly

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3d5d91403fdb_add_threat_type_to_logs_table.py  8d42e6da7898_alert_table_update.py  bfc43d354022_add_compliance_report_table.py  c7022c6f5428_initial_database_schema.py  compliance_enhancements.py  dd244f4648a0_create_logs_and_alerts_tables_v5.py  f72b7b047386_create_logs_table.py  ffd5efce1384_add_foreign_key_from_alerts_to_logs.py
app/: main.py
app/api/: alerts.py  auth.py  logs.py
app/core/: config.py  database.py  security.py
app/middleware/: logging_middleware.py
app/models/: __init__.py  alert.py  log.py  user.py
app/schemas/: __init__.py  alert.py  user.py
app/services/: alerting.py  log_service.py  preprocessing.py  storage_service.py  user_service.py
app/services/ai_ml/: ingestion.py
app/services/log_sources/: apache_logs.py
model_infer_api/: Dockerfile  app.py
scripts/: create_migrations.sh  start.sh
scripts/start_services/: services.sh
src/: main.py  worker.py
src/api/: alert.py  auth.py  compliance.py  dashboard.py  health.py  incident.py  ingest.py  log.py
src/core/: celery.py  config.py  database.py  security.py
src/models/: __init__.py  alert.py  compliance.py  incident.py  log.py  processed_logs.py  user.py
src/schemas/: __init__.py  alert.py  compliance.py  dashboard.py  incident.py  log.py  processed_logs.py
src/services/: alerting.py  anomaly_detector.py  compliance_service.py  incident_service.py  log_service.py  qdrant_service.py  storage_service.py  threat_classifier.py  user_service.py
src/services/ai_ml/: ingestion.py
src/services/log_sources/: apache_logs.py
